# RouterAgent

./: README.md  Scraper_script.py  install.sh  router-agent.service  version.txt
router-agent/: Cargo.toml  README.md
router-agent/src/: config.rs  main.rs  web.rs
